src/test/deca/context/invalid/inst_if.deca
//Test lève erreur en vérifiant la regle 3.29
//Resultat: 

{
    int x = 0;
    if(x){
        print("yes");
    }
}